--- a/classification_for_fashion_mnist.ipynb
+++ b/classification_for_fashion_mnist.ipynb
@@ -40,6 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Normalizing the values as every pixle has values from 0-255\n",
     "X_train = X_train/255.0\n",
     "X_test = X_test/255.0\n",
     "\n",
